fix column-gap for content section

--- a/style.css
+++ b/style.css
@@ -398,13 +398,28 @@ section{
     
  
     article .description{
-        max-width: 35%;
-        padding: 0rem 4rem;
+        max-width: 36%;
+/*        padding: 0rem 4rem;*/
     }
    
     article img{
-        max-width: 48%;
+        max-width: 54%;
     }
+    
+        .img-right{
+        display:flex;
+        flex-direction: row;
+        row-gap:2rem;
+        column-gap: 4rem;
+    }
+    
+    .img-left{
+        display:flex;
+        flex-direction: row-reverse;
+        row-gap:2rem;
+        column-gap: 4rem;
+    } 
+    
 
     .socials li{
     font-size: 1rem;
@@ -466,12 +481,14 @@ and (min-width : 1920px)
         display:flex;
         flex-direction: row;
         row-gap:2rem;
+        column-gap: 4rem;
     }
     
     .img-left{
         display:flex;
         flex-direction: row-reverse;
         row-gap:2rem;
+        column-gap: 4rem;
     } 
     
     
@@ -486,7 +503,6 @@ and (min-width : 1920px)
     
     article .description{
         max-width: 36%;
-    padding: 0rem 4rem;
     }
 
     nav ul {
